# QuantManus

./: DYNAMIC_PLANNING.md  LICENSE  README.md  demo_dynamic.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: config.json  config.py
core/: __init__.py  agent.py  context_builder.py  llm_client.py  logger.py  memory_manager.py  memory_store.py  message.py  plan_executor.py  planner.py  session.py  skills_loader.py
docs/: ARCHITECTURE.md  MEMORY_MANAGEMENT.md  PLANNING_GUIDE.md
examples/: example_basic.py  example_memory_management.py  example_planning.py
quantmanus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/: __init__.py  base_tool.py  dai_engine.py  file_tool.py  python_tool.py  system_tool.py
