[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantmanus"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["openai>=1.0"]

[project.scripts]
quantmanus = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["core", "config", "tools"]
